# Splitr

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dev-up.bat  docker-compose.yml  package-lock.json  package.json  splitr-m6-m8-plan.md
.claude/agents/: backend-engineer.md  devops-engineer.md  finance-logic-reviewer.md  frontend-engineer.md  mobile-engineer.md  pdf-extraction-engineer.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_hardening.py  0003_parse_status_default.py  0004_refund_idempotency_key.py  0005_users_password_hash.py  0006_item_assignment_confirm_guard.py  0007_reserve_failed_parse_status_transitions.py  0008_vendor_discount_rules.py  0009_expense_discount_snapshot_columns.py  0010_gst_structured_data.py  0011_expense_member_allocations.py  0012_expenses_group_invoice_date_index.py
backend/app/: celery_app.py  config.py  db.py  main.py
backend/app/api/: auth.py  deps.py  expenses.py  groups.py  router.py  schemas.py  settlements.py  users.py  vendor_discount_rules.py
backend/app/domain/: auth.py  gst.py  ledger.py  models.py  pg_guards.py  rounding.py  settlement_simplification.py  splitting.py  vendor_discount.py
backend/app/extraction/: currency.py  pipeline.py  router.py  schema.py  tasks.py  text_path.py  validation.py  vendor_detect.py  vision_path.py
backend/app/extraction/providers/: __init__.py  base.py  gemini.py  openai.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/scripts/: check_alembic_sync.py  e2e_upload_test.py  live_extraction_smoke_test.py  run_dev_server.py  test_one_pdf.py
backend/tests/: auth_test_utils.py  conftest.py  test_api.py  test_api_m2.py  test_auth.py  test_authorization.py  test_config.py  test_extraction_currency.py  test_extraction_pipeline.py  test_extraction_providers.py  test_extraction_router.py  test_extraction_validation.py  test_extraction_vendor_detect.py  test_hardening.py  test_ledger.py  test_m6_allocation.py  test_m6_gst_structured_data.py  test_m6_item_assignment_confirm_guard.py  test_m6_total_reconciliation.py  test_m6_vendor_discount_rules.py  test_m7a_assignment_ui_backend.py  test_models.py  test_rounding.py  test_route_inventory.py  test_settlement_simplification.py  test_splitting.py  test_storage.py  test_upload_and_review.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  DEFERRED.md
docs/design/: ghost-members.md
mobile/: .eslintrc.js  app.json  metro.config.js  package.json
mobile/app/: _layout.tsx  index.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx  signup.tsx
mobile/app/(tabs)/: _layout.tsx  dashboard.tsx  groups.tsx  profile.tsx
mobile/app/expense/: new.tsx  upload.tsx
mobile/app/group/: new.tsx
mobile/src/components/: Button.tsx  Field.tsx  Screen.tsx  StatusBadge.tsx
mobile/src/lib/: api.ts  auth.tsx  config.ts  expenseRouting.ts  localIndex.ts  notifications.ts  session.ts  theme.ts
tests/fixtures/invoices/: amazon_good.expected.json  generate_fixtures.py  swiggy_good.expected.json  zepto_broken.expected.json
web/: .env.example  next.config.js  package.json  tailwind.config.ts
web/app/: layout.tsx  page.tsx
(+40 files in other folders)
